fix interest icon spacing

--- a/server/public/stylesheets/style.css
+++ b/server/public/stylesheets/style.css
@@ -10,6 +10,10 @@
     height: 55px;
 }
 
+.no-bottom-margin {
+    margin-bottom: 0;
+}
+
 nav ul a,
 nav .brand-logo {
     color: #444;
